--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,6 @@
-pygame
+altgraph==0.17.3
+pefile==2023.2.7
+pygame==2.5.1
+pyinstaller==5.13.2
+pyinstaller-hooks-contrib==2023.8
+pywin32-ctypes==0.2.2
